[#0] fix video overflowing on mobile

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -458,6 +458,7 @@ strong a {
 
 pre {
   overflow-x: scroll;
+  width: 100%;
 }
 
 /* inline code styles */
